[package]
name = "huber-pilot-one"
version = "0.1.0"
authors = ["slowtec GmbH", "Markus Kohlhase <markus.kohlhase@slowtec.de>"]
license = "MIT/Apache-2.0"
description = "huber Pilot ONE library"
readme = "README.md"
homepage = "https://github.com/slowtec/huber-pilot-one"
repository = "https://github.com/slowtec/huber-pilot-one"
edition = "2018"

[badges]
travis-ci = { repository = "slowtec/huber-pilot-one" }
maintenance = { status = "actively-developed" }
