[package]
name = "huber-pilot-one"
version = "0.2.1"
authors = ["slowtec GmbH", "Markus Kohlhase <markus.kohlhase@slowtec.de>"]
license = "MIT/Apache-2.0"
description = "huber Pilot ONE library"
categories = ["no-std","embedded"]
readme = "README.md"
homepage = "https://github.com/slowtec/huber-pilot-one"
repository = "https://github.com/slowtec/huber-pilot-one"
edition = "2021"
rust-version = "1.79"

[features]
default = ["std"]
std = []

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_const_for_fn = "warn"

# The error types returned should be self-explanatory.
missing_errors_doc = "allow"
